Polish the rest

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -261,9 +261,9 @@ Software translations:
 
 Welcome to new first-time authors on Decred Magazine: [Joao Paulo Sant'Anna da Silva](https://www.decredmagazine.com/author/joao/) and [Wahid Pessarlay](https://www.decredmagazine.com/author/wahid/) (who also wrote for [Cointelegraph](https://cointelegraph.com/authors/wahid-pessarlay)).
 
-New personal stories and thoughts shared by Decred community members: [Brian Stafford](https://medium.com/authority-magazine/brian-buck-stafford-of-decred-on-the-future-of-money-and-banking-45f25305b409) (@buck54321) on Authority Magazine, [Ronnie Amato](https://www.decredmagazine.com/introducing-decred-community-member-ronnie-amato/) (@MadScrilla1) on Decred Magazine, and [@h3la1 and @Tivra]](https://www.youtube.com/watch?v=jz6lX9TMvdY&t=1m20s) in the Community Roundtable livestream.
+New personal stories and thoughts shared by Decred community members: [Brian Stafford](https://medium.com/authority-magazine/brian-buck-stafford-of-decred-on-the-future-of-money-and-banking-45f25305b409) (@buck54321) on Authority Magazine, [Ronnie Amato](https://www.decredmagazine.com/introducing-decred-community-member-ronnie-amato/) (@MadScrilla1) on Decred Magazine, and [@h3la1 and @Tivra](https://www.youtube.com/watch?v=jz6lX9TMvdY&t=1m20s) in the Community Roundtable livestream.
 
-> Can you please give us your favorite "Life Lesson Quote"? Can you share how that was relevant to you in your life?
+> Can you please give us your favorite "Life Lesson Quote"?
 > 
 > Take a breath. \[@buck54321\]
 
@@ -285,7 +285,7 @@ Community stats as of Oct 1 (compared to Sep 1):
 
 In September the new [treasury](https://dcrdata.decred.org/treasury) received 8,848 DCR worth $241K at September's average rate of $27.19. 3,089 DCR was spent to pay contractors, worth $84K at September's rate, or $99K at August's billing rate of $31.93. 
 
-The [treasury spend transaction](https://dcrdata.decred.org/tx/c8a4d7fae86645449561a3b414ac7df0ea33b5de03e58ded345ad71c485c9c6b) was mined on August Sep 24, it had 28 outputs ranging from 1 DCR to 961 DCR. The transaction was approved with 6,856 Yes votes and 0 No votes.
+The [treasury spend transaction](https://dcrdata.decred.org/tx/c8a4d7fae86645449561a3b414ac7df0ea33b5de03e58ded345ad71c485c9c6b) was mined on Sep 24, it had 28 outputs ranging from 1 DCR to 961 DCR. The transaction was approved with 6,856 Yes votes and 0 No votes.
 
 As of Oct 10, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 817,745 DCR (20.9 million USD at $25.51).
 
@@ -316,44 +316,44 @@ _Image: Pool hashrate distribution._
 
 The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&zoom=l796eq4a-l8vp7dzk&scale=linear&bin=day&axis=time) was 9.28-9.43 million DCR, meaning that 64.1-64.9% of the circulating supply [participated](https://dcrdata.decred.org/charts?chart=stake-participation&zoom=l796eq4a-l8vp7dzk&scale=linear&bin=day&axis=time) in Proof of Stake.
 
-**VSP**: On Oct 1, ~7,820 (+770) live tickets were managed by [listed](https://decred.org/vsp/) vspd servers. Collectively the 18 VSPs managed 19.1% of the ticket pool (+1.8%).
+**VSP**: The [18 listed VSPs](https://decred.org/vsp/) collectively managed ~7,820 (+770) live tickets, which was 19.1% of the ticket pool (+1.8%) as of Oct 1.
 
-Biggest gainers in September are vspd.bass.cf (+726) and vspd.stakey.com (+443).
+Biggest gainers in September are vspd.bass.cf (+726) and vspd.stakey.com (+443). Note that the latter had [API issues](https://github.com/decred/dcrwebapi/pull/171) since Sep 20 and the ticket stats it reported were inaccurate.
 
 ![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { upload }
 
-Note that vspd.stakey.com had [API issues](https://github.com/decred/dcrwebapi/pull/171) since Sep 20 and its ticket count is inaccurate as of Oct 1.
-
 _Image: Distribution of tickets managed by VSPs._
-
-{ There's a new missed ticket distro by VSP chart but not sure if we need a one more chart here. Maybe just link it? }
 
 ![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Live%20Ticket%20Distribution.png) { upload }
 
 _Image: Distribution of solo vs VSP-managed tickets._
 
-{ There's a new missed ticket distro chart but not sure if we need a one more chart here. Maybe just link it? }
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Staking_Monthly_Missed_Tickets.png) { upload }
 
-**Nodes**: Node versions captured by [Decred Mapper](https://nodes.jholdstock.uk/user_agents) on Oct 1 (118 total, dcrd only): v1.7.1 - 38%, v1.7.2 - 29%, v1.7.4 - 14%, v1.7.0 - 10%, other - 9%.
+_Image: Monthly missed tickets since 2016._
 
-Note: [dcrd v1.7.4](https://github.com/decred/dcrd/releases/tag/release-v1.7.4) was a source-only release with the main goal to fix the stalled testnet.
+**Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed 118 dcrd nodes on Oct 1: v1.7.1 - 38%, v1.7.2 - 29%, v1.7.4 - 14%, v1.7.0 - 10%, other - 9%.
+
+Note: [dcrd v1.7.4](https://github.com/decred/dcrd/releases/tag/release-v1.7.4) was a source-only release for developers with the main goal to fix the [stalled testnet](202208.md#dcrd).
 
 ![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-09/700/Reachable%20Node%20Versions.png) { upload }
 
 _Image: dcrd node version distribution._
 
-{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.8-60.9%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 290-493K DCR.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 60.8-60.9%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 290-493K DCR.
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 70 nodes (+28), 105 channels (+37) with a total capacity of 42.5 DCR (+7.1), as of Oct 1.
+
+Thanks to @bochinchero for making DJ less boring with the charts. You can find the charts we cherry-pick here and many others in the [dcrsnapshots](https://github.com/bochinchero/dcrsnapshots) repository.
 
 
 ## Ecosystem
 
-KuCoin was [removed](https://github.com/decred/dcrweb/pull/1064) from the [Exchanges](https://decred.org/exchanges/) list after a report that it did not accept DCR deposits. Two weeks later they [announced](https://www.kucoin.com/news/en-kucoin-opens-mainnet-dcr-tokens-deposit-and-withdrawal-services-20220924) that DCR deposits and withdrawals are enabled.
+KuCoin was [removed](https://github.com/decred/dcrweb/pull/1064) from the [Exchanges list](https://decred.org/exchanges/) after a report that it did not accept DCR deposits. Two weeks later they [announced](https://www.kucoin.com/news/en-kucoin-opens-mainnet-dcr-tokens-deposit-and-withdrawal-services-20220924) that DCR deposits and withdrawals are enabled.
 
 Huobi announced it will [delist 7 privacy coins including DCR](https://www.huobi.com/support/en-us/detail/104917015223952) to "safeguard our users' assets", and was [removed](https://github.com/decred/dcrweb/pull/1081) from the Exchanges list as well.
 
-Cryptohunt added a [page for Decred](https://www.cryptohunt.it/projects/decred). The service aims to make crypto [more accessible](https://medium.com/@cryptohunt/about-cryptohunt-9668aa77412f) to newcomers by providing simple info pages for crypto projects.
+Cryptohunt added a [page for Decred](https://www.cryptohunt.it/projects/decred). The service aims to make crypto [more accessible](https://medium.com/@cryptohunt/about-cryptohunt-9668aa77412f) to newcomers by providing simple info pages for popular crypto projects.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -378,14 +378,12 @@ Secured the following news articles:
 
 **Attended:**
 
-- Paul Rosenberg mentioned Decred at Hackers Congress Paralelni Polis (Prague, Czech Republic). It was a small appearnace on [one slide](https://twitter.com/cryptotnetennba/status/1575969203835715584) but with an important idea:
+Paul Rosenberg mentioned Decred at Hackers Congress Paralelni Polis (Prague, Czech Republic). It was a small appearnace on [one slide](https://twitter.com/cryptotnetennba/status/1575969203835715584) but with an important idea:
 
 > BTC, BCH, Decred, Scrit, whatever.. **Use** it.  
 > Start publishing prices in sats; let people learn how to convert.  
 > Setup middlemen if you like.  
 > Take a year to transition if necessary, but we must use our money.
-
-{ _Can also move to Discussions if this is too small for Events_ }
 
 
 ## Media
@@ -403,16 +401,16 @@ Secured the following news articles:
 
 Twitter users can support [@Decredmagazine](https://twitter.com/decredmagazine) with follows, likes and retweets to help spread the message.
 
-Also, DM is coming to Instagram! Check [@decredmagazine](https://www.instagram.com/decredmagazine/)
+DM is also coming to Instagram - follow [@decredmagazine](https://www.instagram.com/decredmagazine/).
 
 **Selected articles:**
 
-- [Stablecoins on Decred](https://www.decredmagazine.com/stablecoins-on-decred/) by Anon - concept paper posted on Decred forum in 2018 resurrected on DM
+- [Stablecoins on Decred](https://www.decredmagazine.com/stablecoins-on-decred/) by Anon - concept paper posted on Decred forum in 2018, resurrected on DM
 - [Brian 'Buck' Stafford of Decred on the future of money and banking](https://medium.com/authority-magazine/brian-buck-stafford-of-decred-on-the-future-of-money-and-banking-45f25305b409) by Jason Hartman for Authority Magazine
-- [Light at the end of the tunnel](https://www.decredmagazine.com/decred-light-at-the-end-of-the-tunnel/) DCR technical analysis by @Applesaucesome
-- [MondePR August 2022](https://www.decredmagazine.com/mondepr-august-2022/) by @phoenixgreen
+- [Light at the end of the tunnel](https://www.decredmagazine.com/decred-light-at-the-end-of-the-tunnel/) - DCR technical analysis by @Applesaucesome
+- [Monde PR August 2022](https://www.decredmagazine.com/mondepr-august-2022/) by @phoenixgreen
 - [Introducing Decred community member Ronnie Amato](https://www.decredmagazine.com/introducing-decred-community-member-ronnie-amato/) by @phoenixgreen
-- [The one where everything looks bad but I post lots of hopium](https://www.decredmagazine.com/the-one-where-i-post-lots-of-hopium/) DCR technical analysis by @Applesaucesome
+- [The one where everything looks bad but I post lots of hopium](https://www.decredmagazine.com/the-one-where-i-post-lots-of-hopium/) - DCR technical analysis by @Applesaucesome
 - [Rio de Janeiro aims to become a crypto capital](https://www.decredmagazine.com/rio-de-janeiro-aims-to-be-a-crypto-capital/) by @João
 - [Decred releases DCRDEX v0.5 making secure atomic swap-powered trades more accessible](https://decred.org/news/2022-09-28_decred_releases_dcrdex_0.5/) - press release at decred.org
 - [Decred pushes for highly convenient P2P atomic swaps with DCRDEX v0.5](https://www.decredmagazine.com/decred-pushes-for-highly-convenient-p2p-atomic-swaps-with-dcrdex-v0-5/) by Wahid Pessarlay
@@ -422,14 +420,14 @@ Also, DM is coming to Instagram! Check [@decredmagazine](https://www.instagram.c
 - [Decred Community Roundtable - DAOs, governance, marketing, DEX & more](https://www.youtube.com/watch?v=jz6lX9TMvdY) by @Exitus and @phoenixgreen, featuring @WasPraxis, @h3la1, and @MadScrilla1
 - [Decred Monthly Recap - New website, dev updates, Politeia 1.4.0, articles + interviews & more!](https://www.youtube.com/watch?v=7IPj3rWmNY8) by @Exitus
 - [DCRDATA market page - Decred Fundamentals](https://www.youtube.com/watch?v=6YW9JiMT2w8) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/dcrdata-making-markets-decred-fundamentals/)
-- [DCRDEX added Litecoin atomic swap decentralized exchange](https://twitter.com/karamblez/status/1573453810005348353) by @karamble
+- [DCRDEX added Litecoin atomic swap decentralized exchange](https://twitter.com/karamblez/status/1573453810005348353) - animation by @karamble
 - [Why does Decred have its own exchange? - DCRDEX Series](https://www.youtube.com/watch?v=7mx3TCPS5rU) by @phoenixgreen - also as a [text post](https://www.decredmagazine.com/why-does-decred-have-its-own-exchange/)
 
 **Art and fun:**
 
-- @fjsixfjdksfi made a [second track](https://soundcloud.com/openbeats/ob2) (+ a [looped version](https://soundcloud.com/openbeats/ob2_looped) in the Open Beats series, available for free use in Decred-related content (missed in June)
+- @fjsixfjdksfi made a [second track](https://soundcloud.com/openbeats/ob2) (+ a [looped version](https://soundcloud.com/openbeats/ob2_looped)) in the Open Beats series, available for free use in Decred-related content (missed in June)
 - [Decred the armoured lizard](https://www.decredmagazine.com/decred-the-armoured-lizard/) by @OfficialCryptos
-- { Sep or keep for Oct? https://www.youtube.com/watch?v=_0kInW0_QuA https://twitter.com/RichardRed0x/status/1576006973622865920 https://twitter.com/RichardRed0x/status/1576014662537138176 }
+- @richardred made the most accessible [1-min explaier how DCRDEX works](https://www.youtube.com/watch?v=_0kInW0_QuA) featuring DEX Flow by @GhostWridah - also on [Twitter](https://twitter.com/RichardRed0x/status/1576014662537138176)
 
 **Translations:**
 
@@ -447,9 +445,9 @@ Five community members discussed governance, marketing, DEX and many other topic
 
 Selected Reddit posts:
 
-- [Partnership between FIO Protocol and Decred](https://www.reddit.com/r/decred/comments/xd2ixd/partnership_between_fio_protocol_and_decred/) - the proposal was reposted because it didn't meet Politeia's criteria of having a team who will do the work. @sirashtvm answered questions how the FIO protocol works on Reddit and also [in Matrix](https://matrix.to/#/!qYpAAClAYrHaUIGkLs:decred.org/$MhR2C154GfT_UzqZVAzmHPe3TrGl_OJp7diBmlS2JcU).
-- [Listing of Decred Token on Phemex exchange](https://www.reddit.com/r/decred/comments/xqeqg8/listing_of_decred_token_on_phemex_exchange/) - another partnership idea by @sirashtvm where DCR would be listed on Singapore-based Phemex exchange, also discussed [on Matrix](https://matrix.to/#/!qYpAAClAYrHaUIGkLs:decred.org/$BPzC-9nhy3gfgCNNXTXw8QTfV31DVrLVdERfGYqHPTk?via=decred.org&via=matrix.org&via=planetdecred.org). The main point of contention was the $30K "marketing fee" required by Phemex to for trading competitions ($20K) and "KOL Influencer Campaign + AMA" ($10K). The idea has [ended](https://www.reddit.com/r/decred/comments/xqeqg8/listing_of_decred_token_on_phemex_exchange/ir0m9nz/) when it became known that Phemex representative is not interested in further discussion.
-- Another round of [Weekly Contributions](https://www.reddit.com/r/decred/comments/xsacjg/weekly_contributions_special_edition_bounty_pool/) - bounty pool has grown to 4 DCR and @fjsixfjdksfi continues iterating on the format. This edition was focused on (but not limited to) promiting the new Litecoin pairs on DCRDEX.
+- [Partnership between FIO Protocol and Decred](https://www.reddit.com/r/decred/comments/xd2ixd/partnership_between_fio_protocol_and_decred/) - the proposal was reposted because it didn't meet Politeia's criteria of having a team who will do the work. @sirashtvm answered questions how the FIO protocol works on Reddit and also [on Matrix](https://matrix.to/#/!qYpAAClAYrHaUIGkLs:decred.org/$MhR2C154GfT_UzqZVAzmHPe3TrGl_OJp7diBmlS2JcU).
+- [Listing of Decred on Phemex exchange](https://www.reddit.com/r/decred/comments/xqeqg8/listing_of_decred_token_on_phemex_exchange/) - another partnership idea by @sirashtvm where DCR would be listed on Singapore-based Phemex exchange, also discussed [on Matrix](https://matrix.to/#/!qYpAAClAYrHaUIGkLs:decred.org/$BPzC-9nhy3gfgCNNXTXw8QTfV31DVrLVdERfGYqHPTk?via=decred.org&via=matrix.org&via=planetdecred.org). The main point of contention was the $30K "marketing fee" required by Phemex to fund trading competitions ($20K) and "KOL Influencer Campaign + AMA" ($10K). The idea has [ended](https://www.reddit.com/r/decred/comments/xqeqg8/listing_of_decred_token_on_phemex_exchange/ir0m9nz/) when it became known that Phemex representative is not interested in further discussion.
+- [Weekly Contributions - Special Edition](https://www.reddit.com/r/decred/comments/xsacjg/weekly_contributions_special_edition_bounty_pool/) - bounty pool has grown to 4 DCR and @fjsixfjdksfi continues to iterate on the format and rules. This edition was focused on (but not limited to) promiting the new Litecoin pairs on DCRDEX.
 
 Selected Twitter discussions:
 
@@ -464,11 +462,11 @@ In September DCR was trading between USD 23.30-34.70 / BTC 0.00124-0.00175. The 
 
 New market coverage by @Applesaucesome: [Light at the end of the tunnel](https://www.decredmagazine.com/decred-light-at-the-end-of-the-tunnel/) and [The one where everything looks bad but I post lots of hopium](https://www.decredmagazine.com/the-one-where-i-post-lots-of-hopium/).
 
-> I won't sugar coat it, everything look really bad. Stonks, crypto, everything. All the momentum gained from past weeks is retraced. But as we all know, that's where all the hands get shaken out...or we just capitulate again for the nth time. 🙃
+> I won't sugar coat it, everything look really bad. Stonks, crypto, everything. All the momentum gained from past weeks is retraced. But as we all know, that's where all the hands get shaken out...or we just capitulate again for the nth time. 🙃 \[2022-09-25\]
 
 ![](https://www.decredmagazine.com/content/images/size/w1000/2022/09/image-18.png) { upload }
 
-Image: "Decred's BTC pairing is really interesting to watch when you zoom way out." - @Applesaucesome
+_Image: "Decred's BTC pairing is really interesting to watch when you zoom way out." - @Applesaucesome_
 
 On YouTube technical analysis for DCR has been made by [More Crypto Online](https://www.youtube.com/watch?v=oP1-Ie5jFzo) ("it is one of the best altcoin charts out there but there is no guarantee for it to work out"), [Jacob Crypto Bury](https://www.youtube.com/watch?v=FopCO-7UiaA), and [Schulz & Team Analytik](https://www.youtube.com/watch?v=begoqsTKdOI&t=586s) (German).
 
