Intro first draft

--- a/journal/202209.md
+++ b/journal/202209.md
@@ -1,24 +1,18 @@
-# {DRAFT} Decred Journal – September 2022
+# Decred Journal – September 2022
 
 ![](../img/202209.1.github.png)
 
 _Image: Artwork by @OfficialCryptos_
 
-Highlights of September: {
+Highlights of September:
 
-- DCRDEX v0.5 public release made trading more accessible
+- DCRDEX v0.5 public release made permissionless self-custodial trading more accessible with numerous improvements, including more wallet options that don't require full blockchain download.
 
-- LTC pairs live on dex.decred.org
+- LTC trading pairs went live on dex.decred.org.
 
-- decred.org received a batch of updates including 4 updated translations
+- decred.org website received a batch of updates including 4 updated translations.
 
-- any other?
-
-- 
-
-- 
-
-}
+- Decred Lightning Network node count and capacity are on the rise.
 
 Contents:
 
