--- a/journal/202209.md
+++ b/journal/202209.md
@@ -250,7 +250,7 @@ Other:
 
 Software translations:
 
-- A [new status page](https://decredcommunity.github.io/translations/status) has been created to track how up-to-date are Decred software translations and where help is needed. Currently tracking Decrediton, DCRDEX and decred.org website.
+- A [new status page](https://decredcommunity.github.io/translations/status) has been created to track how up-to-date Decred software translations are and where help is needed. Currently tracking Decrediton, DCRDEX and decred.org website.
 
 
 ## People
