--- a/journal/202210.md
+++ b/journal/202210.md
@@ -299,7 +299,7 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In October the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at October's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at October's rate, or ${} at September's billing rate of ${}.
+In October the new [treasury](https://dcrdata.decred.org/treasury) received 8,850 DCR worth $241K at October's average rate of $27.19. XXXX DCR was spent to pay contractors, worth $84K at October's rate, and on this occasion September's billing rate of $27.19 was exactly the same.
 
 { _Treasury spend tx recap: how many outputs, min, max DCR_ }
 
@@ -307,13 +307,17 @@ In October the new [treasury](https://dcrdata.decred.org/treasury) received {n} 
 
 As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
 
+A [proposal](https://proposals.decred.org/record/d5221a9) to continue retaining the services of Monde PR for another year at a cost of $48,000 was approved with 66% Yes votes and voter turnout of 59%.
+
+A [proposal](https://proposals.decred.org/record/0848cc9) to fund work done on the @[dcrtimestampbot](https://twitter.com/dcrtimestampbot) twitter bot at a cost of $1,955 was submitted by @coinshuffle_bot and is under review.
+
 { _High-level recap of decision-making activity and most important events._ }
 
 - {}
 
 { _Check https://github.com/decredcommunity/proposals/commits/master for updates._ }
 
-See Politeia Digest [issue {}]({}) for more details on the month's proposals.
+See Politeia Digest [issue 54](https://blockcommons.red/politeia-digest/issue054/) for more details on the month's proposals.
 
 
 ## Network
