--- a/journal/202210.md
+++ b/journal/202210.md
@@ -299,13 +299,15 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In October the new [treasury](https://dcrdata.decred.org/treasury) received 8,850 DCR worth $241K at October's average rate of $27.19. XXXX DCR was spent to pay contractors, worth $84K at October's rate, and on this occasion September's billing rate of $27.19 was exactly the same.
+In October the new [treasury](https://dcrdata.decred.org/treasury) received 8,850 DCR worth $241K at October's average rate of $27.19. 2,645 DCR was spent to pay contractors, worth $72K at October's rate, and on this occasion September's billing rate of $27.19 was exactly the same.
+
+The Treasury spend [tx](https://dcrdata.decred.org/tx/f79381e591ef46c9ed911d936a9c329d62ac63cd9674d9c2db5855d2e4317358) had 31 outputs making payments to contractors, ranging from 2.3 DCR to 1028 DCR.
 
 { _Treasury spend tx recap: how many outputs, min, max DCR_ }
 
 { _Any other activity with the legacy or new treasury._ }
 
-As of {date}, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is {n} DCR ({n} million USD at ${n.nn}).
+As of Nov 1, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 824,840 DCR (22.5 million USD at $27.28).
 
 A [proposal](https://proposals.decred.org/record/d5221a9) to continue retaining the services of Monde PR for another year at a cost of $48,000 was approved with 66% Yes votes and voter turnout of 59%.
 
