Add vspd, remove cspp

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -129,7 +129,9 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 
 { _Check_ https://github.com/decred/vspd/commits/master }
 
-- {}
+In Progress:
+
+- Add [types module](https://github.com/decred/vspd/pull/356) for API requests/responses/errors.
 
 
 ### dcrpool
@@ -151,15 +153,6 @@ _[dcrlnd](https://github.com/decred/dcrlnd) is Decred's Lightning Network node s
 - https://github.com/decred/dcrlnlpd/commits/master
 
 }
-
-- {}
-
-
-### cspp
-
-_[cspp](https://github.com/decred/cspp) is a server for coordinating coin mixes using the CoinShuffle++ protocol. It is non-custodial, i.e. does not hold any funds._
-
-{ _Check_ https://github.com/decred/cspp/commits/master }
 
 - {}
 
