Dev DCRDEX pass 1
I was curious how much can be done without GitHub. In next commits I'll
fix the links and we'll see how much info was missed without GitHub.

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -159,7 +159,54 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 }
 
-- {}
+Merged in v0.5.4 release:
+
+- Updated btcd to fix a critical Bitcoin block parsing failure. There are now blocks on Bitcoin mainnet and testnet that include bigger Taproot transactions that cannot be deserialized by btcd v0.23.1 and older. The issue affects both full node RPC and SPV wallets.
+
+User-facing changes merged in master:
+
+- Show the user new matches [without having to reload]({a461a3}) the Order page.
+- Restyled the [Markets page]({7f0ef469}) to make it responsive and adjust colors and logos.
+- Reject [invalid addresses]({15d1513}) on Send form.
+- Support [custom wallet path]({d233da7}) for Electrum wallets.
+- Support [unprotected Electrum wallets]({1c6241c0}) (that have no password).
+- [Hide Wallet Settings]({722c6a541}) header when there are none without defaults. { _What does this mean?_ }
+- Updated [Chinese translation]({89273503d}).
+- Show an error when the user attempts to logout while having [active orders]({d46c4ba}).
+- Show or hide the [Accelerate]({eb0063d}) button dynamically.
+- Added a [form]({9e50edea3}) to delete archived records (orders and matches) from the client, with optional saving deleted records in CSV files.
+- Fixed handling when [fee estimation]({70452}) is unsupported or has failed.
+- Fixed multiple UI bugs on the [Markets page]({c0c01899}).
+- Fixed RPC config comparison in [live reconfiguration]({ba711d}) of Electrum wallets.
+- Fixed a case where clients could stay unaware that their [orders have been revoked]({c9b1aed}) due to an upcoming market suspension.
+- Fixed an error when creating an [external wallet]({ccd5edf1}).
+
+Internal and developer changes:
+
+- Support recovery even for [disabled or not connected wallets]({c33ffdf}).
+- Formalized transaction structure for refundable [DCR fidelity bonds]({e8778d7}).
+- Added common interfaces of creating, broadcasting, and refunding [fidelity bonds]({1127e5b2}) and implemented them for Decred.
+- Added [bond validation]({3ae066}) implementation for Decred.
+- Moved hard-coded [tooltip strings]({910370}) to translation files.
+- Fixed [locktime check]({1619a9c}) { _minor, unreleased_ }
+- Improved stability of [swap tests]({a895ff}). { _merge with testing stuff_ }
+- Improved stability of [wallet syncing tests]({6ba5dd4}). { _merge with testing stuff_ }
+- Removed [duplicate translations]({d60649}). { _merge with maintenantce_ }
+- Clarified how to [submit PRs]({729124}) in the contribution guide. { _merge with documentation_ }
+- Added a check that [test names]({112f7ca6}) are valid. { _minor, group with test improvements_ }
+- Abort [request handlers]({e4bdbf02}) when WebSocket connection is closed.
+- Return explicit [locked balance]({b3fddff0}) for ZEC-like coins.
+- Implemented the [`UnlockSpends`]({adfdb2fa}) quirk for `listlockunspent` command that returns unspent but locked outputs. Most assets unlock wallet outputs automatically as they are spent, but some require special handling, currently DOGE and ZEC.
+- Added [release notes]({5550e84}) for v0.5.3 and v0.5.4. { _minor, merge with documentation_ }
+- Fixed and improved [simnet tests]({2294caee}). Most tests will run twice, alternating the maker and taker between clients.
+- Fixed HTML template parsing for keys [containing dash]({0c1aac}). { _minor, group_ }
+- Fixed panic in [WebSocket]({7a949b88}) method for loading candles.
+
+Ethereum support:
+
+- Improved [ETH wallet]({7247ed}) connection management.
+- Added [gas limits]({a00b5bc2}) in ETH and ETH token wallets so that at most 1/4 of the gas limit of a block can be filled up by a swap or redeem transaction.
+- Implemented [RPC client]({921f7f6}) for communicating with an Ethereum node over WebSockets, HTTP or IPC connections.
 
 
 ### dcrdata
