--- a/journal/202210.md
+++ b/journal/202210.md
@@ -120,7 +120,22 @@ _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It 
 
 }
 
-- {}
+`politeiavoter` command-line app:
+
+- Consolidates [voting logic](https://github.com/decred/politeia/pull/1682) by creating votes without the signatures first and then obtaining the signatures from the wallet. This approach is simpler and less error prone.
+
+GUI remake on the new [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure):
+
+- Proposal [vote search](https://github.com/decred/politeiagui/pull/2863).
+- Proposal [author updates](https://github.com/decred/politeiagui/pull/2860), previews of comments replied to in flat mode, and single comment links.
+- Proposal [votes download](https://github.com/decred/politeiagui/pull/2865).
+- Improved [code splitting and chunks cache](https://github.com/decred/politeiagui/pull/2868) and reduced app bundle from 1.5 MB to 0.7 MB (uncompressed).
+- Fixes and refactoring. { 2867 2870 }
+
+pi-ui library (shared by Politeia and Decrediton):
+
+- [Optimized building](https://github.com/decred/pi-ui/pull/466) and enabled compression, reducing bundle size from 740 KB to 430 KB.
+- Dependency { 464 467 } and testing { 465 } improvements.
 
 
 ### vspd
