fix treasury numbers

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -303,7 +303,7 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In October the new [treasury](https://dcrdata.decred.org/treasury) received 8,850 DCR worth $241K at October's average rate of $27.19. 2,645 DCR was spent to pay contractors, worth $72K at October's rate, and on this occasion September's billing rate of $27.19 was exactly the same.
+In October the new [treasury](https://dcrdata.decred.org/treasury) received 8,850 DCR worth $232K at October's average rate of $26.27. 2,645 DCR was spent to pay contractors, worth $69K at October's rate, and $72K at September's billing rate of $27.19.
 
 The Treasury spend [tx](https://dcrdata.decred.org/tx/f79381e591ef46c9ed911d936a9c329d62ac63cd9674d9c2db5855d2e4317358) had 31 outputs making payments to contractors, ranging from 2.3 DCR to 1028 DCR.
 
