--- a/journal/202210.md
+++ b/journal/202210.md
@@ -380,6 +380,19 @@ Join our [#ecosystem](https://chat.decred.org/#/room/#ecosystem:decred.org) chat
 
 { _Summarize outreach/communications/marketing/PR activity for past month and any short-term plans. "Outreach" is anything about "sending our message out". Here is the "big picture" stuff while Events and Media go into the details._ }
 
+Monde PR’s achievements: 
+
+- Pitched one news update
+- Secured two media interviews 
+- Responded to five requests for comments
+
+Secured the following news articles:
+
+- @jy-p was interviewed on the [Digital Cash Network Podcast](https://www.youtube.com/watch?v=SzUtXnoJBbc), talking about Decred’s hybrid consensus model. 
+- An Axios article featuring comments from @jz on the future of crypto and privacy was posted on [NYC Crypto](https://nyccrypto.io/?p=9680) 
+- An article in [BeInCrypto](https://br.beincrypto.com/cvm-lula-divisao-criptomoedas/) on how Decred’s blockchain was used in Brazil’s presidential election to combat fake news
+
+
 
 ## Events
 
