--- a/journal/202210.md
+++ b/journal/202210.md
@@ -390,7 +390,7 @@ Secured the following news articles:
 
 - @jy-p was interviewed on the [Digital Cash Network Podcast](https://www.youtube.com/watch?v=SzUtXnoJBbc), talking about Decred’s hybrid consensus model. 
 - An Axios article featuring comments from @jz on the future of crypto and privacy was posted on [NYC Crypto](https://nyccrypto.io/?p=9680) 
-- An article in [BeInCrypto]([https://br.beincrypto.com/cvm-lula-divisao-criptomoedas/](https://br.beincrypto.com/planos-governo-lula-haddad-registrados-blockchain/) on how Decred’s blockchain was used in Brazil’s presidential election to combat fake news
+- An article in [BeInCrypto](https://br.beincrypto.com/planos-governo-lula-haddad-registrados-blockchain/) on how Decred’s blockchain was used in Brazil’s presidential election to combat fake news
 
 
 
