--- a/journal/202210.md
+++ b/journal/202210.md
@@ -160,7 +160,23 @@ _[dcrlnd](https://github.com/decred/dcrlnd) is Decred's Lightning Network node s
 
 }
 
-- {}
+- [Bumped build](https://github.com/decred/dcrlnd/commit/b1ad5c4011d5d8000af9a9023d04143dd0366e1b) to v0.3.7.
+- Now uses last [gossip timestamp](https://github.com/decred/dcrlnd/commit/0211d22ea78bae46ef10b0ab634ca91b994c1dab) in gossip queries. 
+
+This modifies the gossiper subsystem to persist the timestamp of the
+last received gossip message during active sync so that, upon restarting
+the sync, gossip messages generated after the stored timestamp will be
+relayed from the remote host to the local one.
+
+This is needed to ensure that a node that remains offline for some time
+will still be able to fetch gossip messages (in particular,
+ChannelUpdates) to update their local view of the network correctly.
+
+Before this commit, a node that remained offline for a significant
+fraction of time could miss many ChannelUpdate messages for existing
+channels, such that the channel would eventually be marked as zombie in
+the database.
+- [Updated](https://github.com/decred/dcrlnd/commit/15862e11d298b9b78cb49ebcef128edd3fcd6e43) go.mod to v1.18.
 
 
 ### DCRDEX
