Dev dcrctl, Decrediton expand + comments

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -79,6 +79,7 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 - Make sure peer address is [added to address manager](https://github.com/decred/dcrd/pull/3013). { _Is it a bugfix? If so, what was the bug?_ }
 - Fixed [database upgrade](https://github.com/decred/dcrd/pull/3010) logic. { _Was it an edge case? How to describe the problem that was fixed?_ }
 
+
 ### dcrwallet
 
 _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by command-line and graphical wallet apps._
@@ -96,7 +97,7 @@ _[dcrctl](https://github.com/decred/dcrctl) is a command-line client for dcrd an
 
 { _Check_ https://github.com/decred/dcrctl/commits/master }
 
-- [Updated README.md](https://github.com/decred/dcrctl/pull/52) for v1.7.5 release.
+- [Updated README.md](https://github.com/decred/dcrctl/pull/52) for v1.7.5 release. { _minor, just a link change, not worth the section_ }
 
 
 ### Decrediton
@@ -105,8 +106,8 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 
 { _Check_ https://github.com/decred/decrediton/commits/master }
 
-- Bumped to [DCRDEX v0.5.4](https://github.com/decred/decrediton/pull/3816).
-- Regenerated 'original.json' [strings for translations](https://github.com/decred/decrediton/pull/3807).
+- Bumped to [DCRDEX v0.5.4](https://github.com/decred/decrediton/pull/3816) which includes a critical fix to Bitcoin block parsing. { _group with the other DEX module bump_ }
+- Updated [English strings for translation](https://github.com/decred/decrediton/pull/3807). The codebase is periodically scanned for text shown on the UI and that text is collected in a special file that can be translated with an assistant web tool. In other words, the originals are fresh and now is good time to [translate](https://decredcommunity.github.io/translations/status#decrediton). { _normally I'd call it minor but we can highlight it to say that it's good time to translate_ }
 - Bumped to [DCRDEX v0.5.3](https://github.com/decred/decrediton/pull/3812).
 
 
