Dev vspd queue for removal, LN simplify text

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -149,7 +149,7 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 
 In Progress:
 
-- Added [types module](https://github.com/decred/vspd/pull/356) for API requests/responses/errors.
+- Added [types module](https://github.com/decred/vspd/pull/356) for API requests/responses/errors. { _submitted in Nov => can remove the section and report it later_ }
 
 
 ### Lightning Network
@@ -163,23 +163,9 @@ _[dcrlnd](https://github.com/decred/dcrlnd) is Decred's Lightning Network node s
 
 }
 
-- [Bumped build](https://github.com/decred/dcrlnd/pull/167) to v0.3.7.
-- Now uses last [gossip timestamp](https://github.com/decred/dcrlnd/pull/165) in gossip queries.
-
-This modifies the gossiper subsystem to persist the timestamp of the
-last received gossip message during active sync so that, upon restarting
-the sync, gossip messages generated after the stored timestamp will be
-relayed from the remote host to the local one.
-
-This is needed to ensure that a node that remains offline for some time
-will still be able to fetch gossip messages (in particular,
-ChannelUpdates) to update their local view of the network correctly.
-
-Before this commit, a node that remained offline for a significant
-fraction of time could miss many ChannelUpdate messages for existing
-channels, such that the channel would eventually be marked as zombie in
-the database.
-- [Updated](https://github.com/decred/dcrlnd/pull/165) go.mod to v1.18.
+- [Bumped build](https://github.com/decred/dcrlnd/pull/167) to v0.3.7. { _minor, merge_ }
+- Timestamp of the [last received gossip message](https://github.com/decred/dcrlnd/pull/165) is now persisted. Upon restarting, it is sent to a remote peer to request messages since that timestamp. This allows nodes that were offline for some time to fetch missed gossip messages (in particular, ChannelUpdates) to update their local view of the network correctly. Before this change, a node that remained offline long enough could miss many ChannelUpdate-s and incorrectly mark existing channels as zombies in the database.
+- [Maintenance](https://github.com/decred/dcrlnd/pull/165): updated minimum Go version to 1.18, updated to new formatting, dependency bumps.
 
 
 ### DCRDEX
