Dev other: dcrseeder and release PRs

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -251,7 +251,7 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.o
 - Added [ChangeNOW](https://github.com/decred/dcrweb/pull/1093) exchange and specified direct DCR URLs for other instant exchanges that support it.
 - Removed [mobile wallets](https://github.com/decred/dcrweb/pull/1092) from the [Wallets page](https://decred.org/wallets/) because they are no longer maintained.
 - Updated all links and tags for [v1.7.5 release](https://github.com/decred/dcrweb/pull/1091). 
-- Added [category filters](https://github.com/decred/dcrweb/pull/1090) to `/news`. This allows viewers to easily switch between Software Releases, Decred Journal, Press Releases, and media Coverage of Decred.
+- Added [category filters](https://github.com/decred/dcrweb/pull/1090) to `/news`. This allows viewers to easily switch between Software Releases, Decred Journal, Press Releases, and media Coverage of Decred. Each category has a [direct link](https://decred.org/news/#software_releases) and they work without JavaScript.
 - Added DCRDEX v0.5 [Press Release](https://github.com/decred/dcrweb/pull/1085). { _reported in September's Media, maybe drop_ }
 - [Removed](https://github.com/decred/dcrweb/pull/1084) "Decred in the Press" from footer. { _minor, remove_ }
 - Added "News" translation for [Polish and Chinese](https://github.com/decred/dcrweb/pull/1084).
@@ -278,6 +278,18 @@ _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.o
 - https://github.com/orgs/raedahgroup/repositories
 
 }
+
+[dcrseeder](https://github.com/decred/dcrseeder) - a crawler for the Decred network, which exposes a list of reliable nodes via a built-in HTTP server:
+
+- Added [RFC6598](https://github.com/decred/dcrseeder/pull/54) (Carrier-Grade NAT address block) as not routable. { _maybe explain a bit_ }
+- Converted to use [`netip`](https://github.com/decred/dcrseeder/pull/55) package for managing network addresses.
+- Check if host's uptime is [long enough](https://github.com/decred/dcrseeder/pull/57) to be considered "Good".
+- Added node [creation](https://github.com/decred/dcrseeder/pull/56) timestamp. { _notable?_ }
+
+[release](https://github.com/decred/release) - automation tool for making reproducible builds of Decred software:
+
+- [Updated](https://github.com/decred/release/pull/64) to build core software v1.7.5, DCRDEX v0.5.4, Politeia v1.4.0.
+- Use system's native DNS resolver on [Windows](https://github.com/decred/release/pull/65) and on [macOS and OpenBSD](https://github.com/decred/release/pull/66), instead of the Go fallback resolver.
 
 { _More exotic dev sources:_ https://github.com/xaur/decred-news/blob/docs/sources.md#development }
 
