--- a/journal/202210.md
+++ b/journal/202210.md
@@ -52,6 +52,8 @@ https://github.com/decred/decred-binaries/releases/tag/v1.7.5
 
 { what was fixed, maybe drop this section and resort to Dev/DCRDEX if too small }
 
+https://github.com/decred/dcrdex/releases/tag/v0.5.4
+
 
 ## Development
 
@@ -89,14 +91,14 @@ _[Politeia](https://github.com/decred/politeia) is Decred's proposal system. It 
 
 `politeiavoter` command-line app:
 
-- Consolidates [voting logic](https://github.com/decred/politeia/pull/1682) by creating votes without the signatures first and then obtaining the signatures from the wallet. This approach is simpler and less error prone.
+- Consolidated [voting logic](https://github.com/decred/politeia/pull/1682) by creating votes without the signatures first and then obtaining the signatures from the wallet. This approach is simpler and less error prone.
 
 GUI remake on the new [plugin architecture](https://github.com/decred/politeiagui/tree/master/plugins-structure#politeiagui---plugins-structure):
 
-- Proposal [vote search](https://github.com/decred/politeiagui/pull/2863).
-- Proposal [author updates](https://github.com/decred/politeiagui/pull/2860), previews of comments replied to in flat mode, and single comment links.
-- Proposal [votes download](https://github.com/decred/politeiagui/pull/2865).
-- Improved [code splitting and chunks cache](https://github.com/decred/politeiagui/pull/2868) and reduced app bundle from 1.5 MB to 0.7 MB (uncompressed).
+- Implemented proposal [vote search](https://github.com/decred/politeiagui/pull/2863).
+- Implemented proposal [author updates](https://github.com/decred/politeiagui/pull/2860), previews of comments replied to in flat mode, and single comment links.
+- Implemented proposal [votes download](https://github.com/decred/politeiagui/pull/2865).
+- Improved [code splitting and chunks cache](https://github.com/decred/politeiagui/pull/2868), and reduced app bundle from 1.5 MB to 0.7 MB (uncompressed size).
 - Fixes and refactoring. { 2867 2870 }
 
 pi-ui library (shared by Politeia and Decrediton):
@@ -109,7 +111,6 @@ pi-ui library (shared by Politeia and Decrediton):
 
 _[dcrlnd](https://github.com/decred/dcrlnd) is Decred's Lightning Network node software. LN enables instant and low-cost transactions._
 
-- [Bumped build](https://github.com/decred/dcrlnd/pull/167) to v0.3.7. { _minor, merge_ }
 - Timestamp of the [last received gossip message](https://github.com/decred/dcrlnd/pull/165) is now persisted. Upon restarting, it is sent to a remote peer to request messages since that timestamp. This allows nodes that were offline for some time to fetch missed gossip messages (in particular, ChannelUpdates) to update their local view of the network correctly. Before this change, a node that remained offline long enough could miss many ChannelUpdate-s and incorrectly mark existing channels as zombies in the database.
 - [Maintenance](https://github.com/decred/dcrlnd/pull/165): updated minimum Go version to 1.18, updated to new formatting, dependency bumps.
 
@@ -118,42 +119,37 @@ _[dcrlnd](https://github.com/decred/dcrlnd) is Decred's Lightning Network node s
 
 _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecting exchange for trustless trading, powered by atomic swaps._
 
-Merged in v0.5.4 release:
+Merged in [v0.5.4 release](https://github.com/decred/dcrdex/releases/tag/v0.5.4):
 
 - Updated btcd to fix a critical Bitcoin [block parsing failure](https://github.com/decred/dcrdex/pull/1897). There are now blocks on Bitcoin mainnet and testnet that include bigger Taproot transactions that cannot be deserialized by btcd v0.23.1 and older. The issue affects takers that use full node RPC or SPV wallets.
 
-User-facing changes merged in master:
+User-facing changes merged in `master`:
 
 - Show new matches dynamically [without having to reload](https://github.com/decred/dcrdex/pull/1864) the Orders page.
 - Restyled the [Markets page](https://github.com/decred/dcrdex/pull/1825) and made it responsive across desktop, tablet and mobile layouts.
 - Reject [invalid addresses](https://github.com/decred/dcrdex/pull/1840) on Send form. Also fixed handling when fee estimation is unsupported or has failed, so that sending is possible even without fee estimates.
 - Support [custom wallet path](https://github.com/decred/dcrdex/pull/1870) for Electrum wallets. Also, support unprotected Electrum wallets (those having no password).
-- Fixed inconsistent UI when the [Wallet Settings](https://github.com/decred/dcrdex/pull/1845) button is hidden when additional settings are available. { _minor, merge_ }
 - Updated [Chinese translation](https://github.com/decred/dcrdex/pull/1871).
 - Show an error when the user attempts to logout while having [active orders](https://github.com/decred/dcrdex/pull/1904).
 - Fixed the [accelerate order button](https://github.com/decred/dcrdex/pull/1847) not hiding after the swap tx is mined.
-- Added a [form](https://github.com/decred/dcrdex/pull/1916) to delete archived records (orders and matches) from the client, with optional saving of deleted records in CSV files.
+- Added a [form](https://github.com/decred/dcrdex/pull/1916) to delete archived records (orders and matches) from the client, and an option to export deleted records as CSV files.
 - Fixed multiple UI bugs on the [Markets page](https://github.com/decred/dcrdex/pull/1890).
 - Fixed a case where clients could stay unaware that their [orders have been revoked](https://github.com/decred/dcrdex/pull/1865) due to an upcoming market suspension.
-- Fixed an error when creating an [external wallet](https://github.com/decred/dcrdex/pull/1913).
+- Fixed ~2 other bugs { 1845 1913 }.
 
 Internal and developer changes:
 
 - Fixed recovery for [not connected wallets](https://github.com/decred/dcrdex/pull/1891) and added support for recovering disabled wallets.
 - Implemented foundations for DCR [fidelity bonds](https://github.com/decred/dcrdex/pull/1818): bond transaction structure, common interfaces to create/broadcast/refund bonds (for client), parsing and validation of bond tx (for server). Time-locked [fidelity bonds](https://en.wikipedia.org/wiki/Fidelity_bond) will replace the current registration fee system. Bonds will be redeemable by the user who posted the bond after a certain time, to create an opportunity cost to use DCRDEX instead of a simple monetary cost. It also is a prerequisite for building a [server mesh](https://github.com/decred/dcrdex/issues/1765). To make the transition smoother, the client and server retain all the legacy registration fee machinery, and the clients continue to use the legacy registration system for now.
-- Moved hard-coded [tooltip strings](https://github.com/decred/dcrdex/pull/1902) to translation files.
-- Fixed [locktime check](https://github.com/decred/dcrdex/pull/1907) { _minor, unreleased_ }
-- Improved stability of [swap tests](https://github.com/decred/dcrdex/pull/1737). { _merge with testing stuff_ }
-- Improved stability of [wallet syncing tests](https://github.com/decred/dcrdex/pull/1914). { _merge with testing stuff_ }
-- Removed [duplicate translations](https://github.com/decred/dcrdex/pull/1910). { _minor, merge with translations or general maintenance_ }
-- Clarified how to [submit PRs](https://github.com/decred/dcrdex/commit/7291243e4b02fbae99acbff4495def28da2367c1) in the contribution guide. { _merge with documentation_ }
-- Added a check that [test names](https://github.com/decred/dcrdex/pull/1926) are valid. { _minor, group with test improvements_ }
 - Expire [request timeouts](https://github.com/decred/dcrdex/pull/1915) when WebSocket connection is closed, to avoid hangs on shutdown.
 - Fixed [locked balance](https://github.com/decred/dcrdex/pull/1918) calculation for ZEC. This required to implement a workaround for the wallet not unlocking spent coins automatically. Currently DOGE and ZEC require this quirk.
-- Added [release notes](https://github.com/decred/dcrdex/pull/1899) for v0.5.3 and v0.5.4. { _minor, merge with documentation_ }
+- Documentation improvements { 1899, commit 7291243 }
+- Translation system improvements { 1902 1910 }
 - Fixed and improved [simnet tests](https://github.com/decred/dcrdex/pull/1909). Most tests will run twice, alternating the maker and taker between clients. This has helped to discover a few bugs.
-- Fixed HTML template parsing for keys [containing dash](https://github.com/decred/dcrdex/pull/1923) (welcome to DCRDEX, [@norwnd](https://github.com/decred/dcrdex/commits?author=norwnd)!). { _minor, group?_ }
-- Fixed panic in [WebSocket](https://github.com/decred/dcrdex/pull/1928) method for loading candles.
+- Test stability improvements { 1737 1914 1926 }
+- Fixed HTML template parsing for keys [containing dash](https://github.com/decred/dcrdex/pull/1923) (welcome to DCRDEX, [@norwnd](https://github.com/decred/dcrdex/commits?author=norwnd)!).
+- Fixed panic in [WebSocket](https://github.com/decred/dcrdex/pull/1928) method for loading candles. { _merge?_ }
+- Fixed ~{} other bugs { 1907 }.
 
 Ethereum support:
 
@@ -182,13 +178,11 @@ _[dcrdocs](https://github.com/decred/dcrdocs) is the source code for Decred [use
 
 _[dcrweb](https://github.com/decred/dcrweb) is the source code for the [decred.org](https://decred.org/) website._
 
-- Sorted [Software Releases](https://github.com/decred/dcrweb/pull/1094). { _minor, drop_ }
 - Added [ChangeNOW](https://github.com/decred/dcrweb/pull/1093) exchange and specified direct DCR URLs for other instant exchanges that support it.
 - Removed [mobile wallets](https://github.com/decred/dcrweb/pull/1092) from the [Wallets page](https://decred.org/wallets/) because they are no longer maintained.
 - Updated all links and tags for [v1.7.5 release](https://github.com/decred/dcrweb/pull/1091). 
 - Added [category filters](https://github.com/decred/dcrweb/pull/1090) to `/news`. This allows viewers to easily switch between Software Releases, Decred Journal, Press Releases, and media Coverage of Decred. Each category has a [direct link](https://decred.org/news/#software_releases) and they work without JavaScript.
 - Added DCRDEX v0.5 [Press Release](https://github.com/decred/dcrweb/pull/1085). { _reported in September's Media, maybe drop_ }
-- [Removed](https://github.com/decred/dcrweb/pull/1084) "Decred in the Press" from footer. { _minor, remove_ }
 - Added "News" translation for [Polish and Chinese](https://github.com/decred/dcrweb/pull/1084).
 - Ensure news posts are always [sorted](https://github.com/decred/dcrweb/pull/1084) by date.
 - Added a large number of [news posts](https://github.com/decred/dcrweb/pull/1084) consisting of previous releases.
