--- a/journal/202210.md
+++ b/journal/202210.md
@@ -378,7 +378,13 @@ Secured the following news articles:
 
 { _Add links to text posts on DM when available for the videos_ }
 
-- {}
+- [Decred News Update - Brazil's future President uses time-stamping, LTC Markets on DEX, Dcrd v1.7.5](https://youtu.be/OOWQ7sxr43E) by @Exitus
+- [Discovering DCRDEX Markets page - DCRDEX Fundamentals](https://youtu.be/67cduOxn7JM) by @PhoenixGreen
+- [DCRDEX First Look - DecredDEX Fundamentals](https://youtu.be/S4fVlYmo2Vk) by @PhoenixGreen
+- [Peer to Peer Exchange - The future is here - Decred DCRDEX](https://youtu.be/oBrJgG-x9UY) by @PhoenixGreen
+- [But Who is in Charge of Decred? - Decred and the state of the market feat. Eduardo Lima](https://youtu.be/COfKWnl7IYs) by @PhoenixGreen and @Exitus
+- [Decred DEX - Litecoin Markets Now Available. No KYC. No Trading Fees](https://youtu.be/DfcGKUDL4XU) by @karamable
+- [Why does Decred have its own exchange? - DCRDEX Series](https://youtu.be/7mx3TCPS5rU) by @PhoenixGreen
 
 **Audio:**
 
