--- a/journal/202210.md
+++ b/journal/202210.md
@@ -422,7 +422,7 @@ Selected Twitter discussions:
 
 ## Markets
 
-In October DCR was trading between USD {n.nn}-{n.nn} / BTC {n.nnnnn}-{n.nnnnn}. The average daily rate was ${n.nn}.
+In October DCR was trading between USD 23.50-29.90 / BTC 0.001276-0.001521. The average daily rate was $26.27.
 
 { _Optional: Markets overview, USD and BTC price trends, highs and lows, interesting events, interesting analysis._ }
 
