Dev feedback from davecgh

--- a/journal/202210.md
+++ b/journal/202210.md
@@ -64,10 +64,9 @@ The work reported below has the "merged to master" status unless noted otherwise
 
 _[dcrd](https://github.com/decred/dcrd) is a full node implementation that powers Decred's peer-to-peer network around the world._
 
-- Utilize [server context](https://github.com/decred/dcrd/pull/3011) when connecting to peers to make shutdown more responsive. { _Correct?_ }
-- Use [context in RPC tests](https://github.com/decred/dcrd/pull/3012). { _Is it to test that cancellation/shutdown works, or to be able to cancel/abort the test itself?_ }
-- Make sure peer address is [added to address manager](https://github.com/decred/dcrd/pull/3013). { _Is it a bugfix? If so, what was the bug?_ }
-- Fixed [database upgrade](https://github.com/decred/dcrd/pull/3010) logic. { _Was it an edge case? How to describe the problem that was fixed?_ }
+- Utilize [server context](https://github.com/decred/dcrd/pull/3011) when connecting to peers to make shutdown more responsive.
+- Use [context in RPC tests](https://github.com/decred/dcrd/pull/3012). It allows two things: test that cancellation and shutdown work correctly, and to be able to abort the test if necessary.
+- Make sure peer address is [added to address manager](https://github.com/decred/dcrd/pull/3013). It helps speed up discovery of new nodes on the network by ensuring they are added to the list of addresses that need to be tried in order to build reputation when they haven't otherwise been seen before.
 
 
 ### dcrwallet
@@ -467,6 +466,6 @@ Most information from third parties is relayed directly from the source after a 
 Credits (alphabetical order):
 
 - writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
-- reviews and feedback: {}
+- reviews and feedback: davecgh
 - title image: {}
 - funding: Decred stakeholders
