--- a/journal/202210.md
+++ b/journal/202210.md
@@ -230,7 +230,7 @@ Community stats as of Nov 1 (compared to Oct 1):
 
 In October the new [treasury](https://dcrdata.decred.org/treasury) received 8,850 DCR worth $232K at October's average rate of $26.27. 2,645 DCR was spent to pay contractors, worth $69K at October's rate, and $72K at September's billing rate of $27.19.
 
-The Treasury spend [tx](https://dcrdata.decred.org/tx/f79381e591ef46c9ed911d936a9c329d62ac63cd9674d9c2db5855d2e4317358) had 31 outputs making payments to contractors, ranging from 2.3 DCR to 1028 DCR.
+The [treasury spend tx](https://dcrdata.decred.org/tx/f79381e591ef46c9ed911d936a9c329d62ac63cd9674d9c2db5855d2e4317358) had 31 outputs making payments to contractors, ranging from 2.3 DCR to 1028 DCR.
 
 { _Treasury spend tx recap: how many outputs, min, max DCR_ }
 
@@ -240,7 +240,7 @@ As of Nov 1, combined balance of [legacy](https://dcrdata.decred.org/address/Dcu
 
 A [proposal](https://proposals.decred.org/record/d5221a9) to continue retaining the services of Monde PR for another year at a cost of $48,000 was approved with 66% Yes votes and voter turnout of 59%.
 
-A [proposal](https://proposals.decred.org/record/0848cc9) to fund work done on the @[dcrtimestampbot](https://twitter.com/dcrtimestampbot) twitter bot at a cost of $1,955 was submitted by @coinshuffle_bot and is under review.
+A [proposal](https://proposals.decred.org/record/0848cc9) to fund work done on the [@dcrtimestampbot](https://twitter.com/dcrtimestampbot) Twitter bot at a cost of $1,955 was submitted by @coinshuffle\_bot.
 
 { _High-level recap of decision-making activity and most important events._ }
 
